Update clipping menu on article page to fix tooltip and font size issues.

--- a/app/assets/stylesheets/design/app.css.scss
+++ b/app/assets/stylesheets/design/app.css.scss
@@ -64,6 +64,11 @@ a:hover,
   text-decoration: none;
 }
 
+ul,
+ol {
+  list-style: none;
+}
+
 div.notice,
 div.warning,
 div.danger,
